[package]
name = "tdl-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "tdl_integration_tests"
path = "src/lib.rs"

[dev-dependencies]
anyhow = "1.0.98"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-core = { path = "../../components/spider-core" }
spider-task-executor = { path = "../../components/spider-task-executor" }
spider-tdl = { path = "../../components/spider-tdl" }
