[project]
name = "spider-client"
version = "0.1.0"
description = "Spider client library"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["spider-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client"]
