[project]
name = "spider-task-executor"
version = "0.1.0"
description = "Spider task executor for running python tasks"
requires-python = ">=3.10"
dependencies = ["core"]

[project.scripts]
spider-task-executor = "task_executor.task_executor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_executor"]
