[package]
name = "e2e"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
huntsman-nn-core = { path = "../../../examples/huntsman/nn/core" }
rand = "0.9.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-client = { path = "../../../components/spider-client" }
spider-core = { path = "../../../components/spider-core" }
tokio = {
  version = "1.52.3",
  features = ["macros", "rt-multi-thread", "sync", "time"]
}
tonic = "0.14.6"
