[package]
name = "task-executor-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "task_executor_tests"
path = "src/lib.rs"

[[test]]
name = "executor"
path = "tests/executor.rs"

[[test]]
name = "overhead_instrument"
path = "tests/overhead_instrument.rs"

[dependencies]
bincode = "1.3.3"
bytes = "1.10"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-core = { path = "../../../components/spider-core" }
spider-task-executor = { path = "../../../components/spider-task-executor" }
spider-tdl = { path = "../../../components/spider-tdl" }
tokio = { version = "1.50.0", features = ["macros", "rt", "io-util", "process", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
integration-test-tasks = { path = "../integration-test-tasks" }
tabled = "0.20.0"
