[package]
name = "tdl-integration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "tdl_integration"
path = "src/lib.rs"

[[test]]
name = "complex"
path = "tests/complex.rs"

[dev-dependencies]
anyhow = "1.0.98"
huntsman-complex-types = { path = "../../../examples/huntsman/complex/types" }
rmp-serde = "1.3.1"
spider-core = { path = "../../../components/spider-core" }
spider-task-executor = { path = "../../../components/spider-task-executor" }
spider-tdl = { path = "../../../components/spider-tdl" }
