[package]
name = "test-utils"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "test_utils"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
bincode = "1.3.3"
bytes = "1.10"
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std"
] }
rmp-serde = "1.3.1"
serde = "1.0.228"
spider-core = { path = "../../../components/spider-core" }
spider-execution-manager = { path = "../../../components/spider-execution-manager" }
spider-task-executor = { path = "../../../components/spider-task-executor" }
spider-tdl = { path = "../../../components/spider-tdl" }
tokio = { version = "1.50.0", features = [
  "io-util",
  "macros",
  "process",
  "rt",
  "sync",
  "time"
] }
tokio-util = { version = "0.7", features = ["codec"] }
